--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <h3><a id="results" class="anchor" href="#results" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current Status and Preliminary Results:</h3>
 <p dir="ltr">
-	We are done with the implementation of our training algorithm, and have also parallelized our classification approach over a single GPU. We are now in the process of profiling times with various datasets. Since we have implemented the SMO algorithm used by LibSVM, we get similar accuracy results and support-vector counts. Initial results on the popular <strong>Adult</strong>, <strong>MNIST</strong> and <strong>Forest Covertype</strong> datasets (Asuncion &amp; Newman, 2007) show the following training speedups over LibSVM:
+	We are done with the implementation of our training algorithm, and have also parallelized our classification approach over a single GPU. We are now in the process of profiling times with various datasets. Since we have implemented the SMO algorithm used by LibSVM, we get <strong>similar accuracy results and support-vector counts</strong>. Initial results on the popular <strong>Adult</strong>, <strong>MNIST</strong> and <strong>Forest Covertype</strong> datasets (Asuncion &amp; Newman, 2007) show the following training speedups over LibSVM:
 </p>
 
 <div dir="ltr">
