--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				</td>
 				<td class="info_column">
 					<p dir="ltr">
-						(Note: Full, 581,012 dataset used.) <br>
+						(Note: Full 581,012 point dataset used.) <br>
 						<strong>591 s.</strong> (10 GPUs)
 					</p>
 				</td>
