added work division

--- a/index.html
+++ b/index.html
@@ -530,5 +530,15 @@
 	<sup>[5]</sup> B. Catanzaro, N. Sundaram, and K. Keutzer. Fast support vector machine training and classification on graphics processors. In ICML ’08: Proceedings of the 25th international conference on Machine learning, pages 104–111, New York, NY, USA, 2008. ACM.
 </p>
 
+<br/>
+<br/>
+<h3>
+	<a id="work" class="anchor" href="#work" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+	Work division
+</h3>
+<p dir="ltr">
+	Both Aditya (andrewID: <strong>kgabbita</strong>) and Siddharth (andrewID: <strong>siddhar2</strong>) have divided work equally among themselves.
+</p>
+
 </body>
 </html>
